--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@ body {
 
 .container {
 	text-align: center;
+	background: none repeat scroll 0 0 rgba(85, 85, 85, 0.3);
+    min-height: 600px;
+    width: 100% !important;
 }
 
 .countdown-section {
