--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html, body {
+	height: 100%;
+}
+
 body {
 	color: #FFFFFF !important;
 	font: 18px 'Lato', Arial, Helvetica, sans-serif, serif !important;
@@ -6,7 +10,7 @@ body {
 .container {
 	text-align: center;
 	background: none repeat scroll 0 0 rgba(85, 85, 85, 0.3);
-    min-height: 600px;
+    height: 100%;
     width: 100% !important;
 }
 
